<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/posts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/post_image"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginEnd="15dp"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="@string/my_date"/>
    <TextView
        android:id="@+id/post_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="@string/my_description"/>
    <Button
        android:id="@+id/delete"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>
</LinearLayout>
